BUGFIX: Adjust styles for long labels
Long labels float out of the container and do not look nice. This adds an ellipsis and the tooltip is always available on hover to read the whole text. The Image is now also aligned in centered position.

--- a/packages/react-ui-components/src/SelectBox_Option_MultiLineWithThumbnail/style.css
+++ b/packages/react-ui-components/src/SelectBox_Option_MultiLineWithThumbnail/style.css
@@ -1,7 +1,7 @@
 .multiLineWithThumbnail__item {
     display: grid;
     grid-template-columns: auto 1fr;
-    gap: -var(--spacing-Half);
+    column-gap: var(--spacing-Half);
     align-items: start;
     box-sizing: content-box;
     background-color: var(--colors-ContrastDarkest);
@@ -10,6 +10,9 @@
 .multiLineWithThumbnail__item span {
     grid-column: 2;
     grid-row: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &.multiLineWithThumbnail__secondaryLabel {
         grid-row: 2;
@@ -50,12 +53,10 @@
     background-size: 10px 10px;
     background-position: 0 0, 25px 25px;
     background-image: linear-gradient(45deg, #cccccc 25%, transparent 25%, transparent 75%, #cccccc 75%, #cccccc), linear-gradient(45deg, #cccccc 25%, transparent 25%, transparent 75%, #cccccc 75%, #cccccc);
-    margin-right: .75em;
     display: inline-block;
     vertical-align: middle;
-    margin-left: -var(--spacing-Full);
-    margin-top: -var(--spacing-Half);
-    margin-bottom: -var(--spacing-Half);
+    margin-left: -var(--spacing-Half);
+    align-self: center;
 }
 
 .multiLineWithThumbnail__item:hover .multiLineWithThumbnail__secondaryLabel,
